# Course-work

./: .gitmodules  CMakeLists.txt  README.md  build.sh  main.cpp
include/: App.hpp  ConsoleFunctions.hpp  EquationTypes.hpp  Util.hpp  Window.hpp  WindowAction.hpp
src/: App.cpp  ConsoleFunctions.cpp  EquationTypes.cpp  Util.cpp  Window.cpp
